<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="7"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTicketNum"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="Ticket ID"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblTicketTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="6"
            android:gravity="left|center_vertical"
            android:text="@string/lblTicketTime"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblBuyerName"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/lblBuyerName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="6"
            android:gravity="left|center_vertical"
            android:text="@string/lblAddress" />

    </LinearLayout>
</LinearLayout>

